--- a/css-sass/view/test/_urine.scss
+++ b/css-sass/view/test/_urine.scss
@@ -2,6 +2,12 @@
 
 .view-test-urine-analysis {
     .test-section-description {
+        h1 {
+            @media print {
+                margin: 0;
+            }
+        }
+
         p {
             margin-bottom: 0;
         }
@@ -15,6 +21,11 @@
         /* phone */
         @media only screen and (max-width:$mq-phone) {
             font-size: 146.5%;
+        }
+
+        @media only print {
+            font-size: 146.5%;
+            border-bottom: 0;
         }
     }
 
@@ -45,7 +56,7 @@
             line-height: 100%;
 
             /* phone */
-            @media only screen and (max-width:$mq-phone) {
+            @media only screen and (max-width:$mq-phone), print {
                 font-size: 138.5%;
             }
         }
@@ -75,7 +86,7 @@
             margin-top: 26%;
     
             /* phone */
-            @media only screen and (max-width:$mq-phone) {
+            @media only screen and (max-width:$mq-phone), print {
                 margin-top: 30px;
             }
         }
@@ -92,7 +103,7 @@
             padding-left: 10px;
 
             /* phone */
-            @media only screen and (max-width:$mq-phone) {
+            @media only screen and (max-width:$mq-phone), print {
                 font-size: 138.5%;
             }
         }
@@ -116,7 +127,7 @@
                     left: -7%;
 
                     /* phone */
-                    @media only screen and (max-width:$mq-phone) {
+                    @media only screen and (max-width:$mq-phone), print {
                         left: -3%;
                     }
                 }
@@ -135,16 +146,17 @@
             padding-top: 4px;
 
             .range {
-                padding: 2px 2px;
-                height: 4px;
-                background-color: #e8eae5;
+                position: relative;
                 border-radius: 3px;
+                border: 4px solid #e8eae5;
             }
 
             .value {
-                height: 100%;
-                background-color: #6b6b6b;
+                position: absolute;
+                top: -2px;
                 width: 43%;
+
+                border-top: 4px solid #6b6b6b;
             }
         }
 
@@ -206,7 +218,7 @@
             }
 
             /* phone */
-            @media only screen and (max-width:$mq-phone) {
+            @media only screen and (max-width:$mq-phone), print {
                 padding: 7px 10px 7px (10px + $widgetIndicatorWidth);
                 max-width: 150px;
 
@@ -222,7 +234,7 @@
             margin: 15px 0 0 20px;
 
             /* phone */
-            @media only screen and (max-width:$mq-phone) {
+            @media only screen and (max-width:$mq-phone), print {
                 margin-left: 10px;
             }
         }
@@ -236,7 +248,7 @@
                 bottom: 43%;
 
                 /* phone */
-                @media only screen and (max-width:$mq-phone) {
+                @media only screen and (max-width:$mq-phone), print {
                     font-size: 230%;
                 }
             }
