--- a/css-sass/view/subtest/pod/_color.scss
+++ b/css-sass/view/subtest/pod/_color.scss
@@ -17,6 +17,13 @@
 		text-align: center;
 		font-weight: bold;
 		font-size: 210%;
+
+
+	    /* phone */
+	    @media only screen and (max-width:($mq-phone)),
+	        only print {
+	        	font-size: 138.5%;
+	    }
 	}
 
 	.description {
