#1418: Updated print link copy. It now triggers print on click. https://app.asana.com/0/7344014987243/9675985125553

--- a/js/template/Overview.html
+++ b/js/template/Overview.html
@@ -32,7 +32,7 @@
 
 							<p class="info">
 								<span class="report-date">Report Date: {{formatDate date "F j, Y"}}</span>
-								<a class="print yui3-hidden-phone" href="{{printUrl}}" target="_blank">Print original lab report</a>
+								<a class="print yui3-hidden-phone" href="">Print Healthtracks Report</a>
 							</p>
 						</div>
 					</div>
