print: range: fixed single-line-label padding

--- a/css-sass/view/subtest/_range.scss
+++ b/css-sass/view/subtest/_range.scss
@@ -156,6 +156,10 @@
 
         .actual {
             padding-top: 68px;
+
+            @media print {
+                padding-top: 44px;
+            }
         }
     }
 }
