--- a/css-sass/view/test/_urine.scss
+++ b/css-sass/view/test/_urine.scss
@@ -170,6 +170,12 @@
             font-weight: bold;
 
             margin-bottom: 20px;
+
+            @media print {
+                margin: 0 0 0 3px;
+                width: auto;
+                text-align: left;
+            }
         }
 
         .description {
