print: remove fixed height from pods, add padding around test headings

--- a/css-sass/view/test/_base.scss
+++ b/css-sass/view/test/_base.scss
@@ -1,5 +1,11 @@
 .view-test-base {
 
+    .header-container {
+        @media print {
+            margin: 20px 0;
+        }
+    }
+
     >.body {
         &.collapsed {
             display: none;
