--- a/css-sass/view/subtest/pod/_base.scss
+++ b/css-sass/view/subtest/pod/_base.scss
@@ -14,6 +14,10 @@
 
 		padding: 15px 15px;
 
+        @media print {
+            height: auto !important;
+        }
+
         >.header {
             font-size: 138.5%;
             font-weight: bold;
