--- a/js/template/Page.html
+++ b/js/template/Page.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="page-section-wrapper page-section-conclusion">
-        <div class="yui3-g-r">
+        <div class="yui3-g-r yui3-hidden-print">
             <div class="yui3-u-1">
                 <div class="yui3-u-c">
                     <div class="widget-circle-arrow up">
@@ -34,6 +34,10 @@
                     </h1>
                 </div>
             </div>
+        </div>
+
+        <div class="end-of-report yui3-visible-print">
+            This is the end of {{patient.name}}’s report.
         </div>
     </div>
 
