--- a/css-sass/_base.scss
+++ b/css-sass/_base.scss
@@ -13,6 +13,10 @@
     @media only screen and (max-width:($mq-phone)) {
         font-size: 116%;
     }
+
+    @media print {
+        font-size: 100%;
+    }
 }
 @mixin smallFontSize {
     font-size: 108%;
@@ -21,6 +25,10 @@
     /* Phone */
     @media only screen and (max-width:($mq-phone)) {
         font-size: 116%;
+    }
+
+    @media print {
+        font-size: 100%;
     }
 }
 
@@ -92,7 +100,7 @@ h4 {
 }
 
 /* Phone & Tablet */
-@media only screen and (max-width:($mq-tablet - 1px)) {
+@media only screen and (max-width:($mq-tablet - 1px)), print {
     p {
         margin-top: 5px;
         margin-bottom: 5px;
