print: updated logo for printing

--- a/css-sass/view/_overview.scss
+++ b/css-sass/view/_overview.scss
@@ -38,7 +38,7 @@
 						$width: image-width($iconGood) * .25;
 
 						position: absolute;
-						top: - $width / 8;
+						top: 1px;
 						left: - $width * 2;
 
 						width: $width;
