--- a/js/template/Overview.html
+++ b/js/template/Overview.html
@@ -43,7 +43,7 @@
 		<div class="yui3-g-r page-section print">
 			<div class="yui3-u-5-12">
 				<div class="yui3-u-c">
-					<img class="logo" src="images/page/logo.png" alt="Healthtracks" />
+					<img class="logo" src="images/page/logo-print.png" alt="Healthtracks" />
 				</div>
 			</div>
 
